src/style.css
@font-face {
	font-family: lato-fallback;
	font-weight: normal;
	src: local(Arial),
		local(Arial MT),
		local(ArialMT),
		local(Arial-MT),
		local(Liberation Sans);
}
@font-face {
	font-family: lato-fallback;
	font-weight: 900;
	src: local(Arial Bold),
		local(Arial MT Bold),
		local(ArialMT-Bold),
		local(Arial-MT-Bold),
		local(Liberation Sans Bold);
}
@font-face {
	font-family: oswald-fallback;
	font-weight: normal;
	src: local(Arial Narrow Bold),
		local(Arial MT Narrow Bold),
		local(ArialMT-Narrow-Bold),
		local(Arial-MT-Narrow-Bold),
		local(Liberation Sans Narrow Bold);
	size-adjust: 90%;
}

:root {
	/* Colours from https://liberal.ca/legacy-uploads/wp-content/uploads/2016/06/LPC-Visual-Identity-Guidelines.pdf */
	--liberal-red: #d71920;
	--liberal-red-shade-1: #b11116;
	--liberal-red-shade-2: #8b0304;
	--liberal-red-shade-3: #760000;
	--liberal-grey: #414042;
	--liberal-grey-tint-1: #6d6e70;
	--liberal-grey-tint-2: #dbdcde;
	--liberal-grey-tint-3: #f1f1f2;
	--accent-steel: #3d4f5d;
	--accent-blue: #0babe3;
	--accent-green: #6ebf52;
	--accent-yellow: #f9b717;

	/* Fonts */
	--font-base: Lato, lato-fallback, sans-serif;
	--font-condensed: Oswald, oswald-fallback, sans-serif;

	/* Constants */
	--padding-std: 16px;
	--header-logo-size: clamp(2.75rem, 12vw, 3.5rem);
	--base-font-size: 18px;
	--float-image-margin-y: 0.25em;
	--float-image-margin-x: 0.5em;

	/* Calculated */
	--header-height: calc(var(--header-logo-size) + var(--padding-std) * 2);
	--padding-section: calc(var(--padding-std) * 4);
	--focus-ring-color-light: var(--liberal-red);
	--focus-ring-color-dark: white;
	--focus-ring-color: var(--focus-ring-color-light); /* Changes based on context; see .light and .dark */
}

html {
	background: white;
	color: black;
	font-size: var(--base-font-size);
	line-height: 1.4;
	font-family: var(--font-base);
	scroll-padding-top: var(--header-height);
	scroll-behavior: smooth;
	accent-color: var(--liberal-red);

	@media (prefers-reduced-motion) {
		scroll-behavior: initial;
	}
}

html, body {
	margin: 0;
}

::-moz-selection {
	background: var(--accent-steel);
	text-shadow: none;
	color: white;
}

::selection {
	background: var(--accent-steel);
	text-shadow: none;
	color: white;
}

h1, h2, h3, h4, h5, h6 {
	font-family: var(--font-condensed);
}

p, h1, h2, h3, h4, h5, h6, dl, ul, ol, li, dt, dd {
	margin: 0;
}

.prose :is(p, h1, h2, h3, h4, h5, h6, dl, ul, ol, li, dt, dd) {
	margin: revert;

	&:first-child {
		margin-top: 0;
	}

	&:last-child {
		margin-bottom: 0;
	}
}

hr {
	display: block;
	height: 1px;
	border: 0;
	border-top: 1px solid currentcolor;
	margin: var(--padding-std) 0;
	padding: 0;
}

a {
	color: inherit;

	&:focus-visible {
		outline: 2px solid var(--focus-ring-color);
		outline-offset: 2px;
	}
}

audio,
canvas,
iframe,
img,
svg,
video {
	vertical-align: middle;
}

fieldset {
	border: 0;
	margin: 0;
	padding: 0;
}

legend {
	padding: 0;
}

textarea {
	resize: vertical;
}

.hidden,
[hidden] {
	display: none !important;
}

.visually-hidden {
	border: 0;
	clip: rect(0, 0, 0, 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

.visually-hidden.focusable:active,
.visually-hidden.focusable:focus {
	clip: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	position: static;
	white-space: inherit;
	width: auto;
}

.invisible {
	visibility: hidden;
}

.clearfix::before,
.clearfix::after {
	content: "";
	display: table;
}

.clearfix::after {
	clear: both;
}

.constrain-width {
	box-sizing: content-box;
	max-width: 60rem;
	margin-left: auto;
	margin-right: auto;
}

.padded-x {
	padding-left: var(--padding-std);
	padding-right: var(--padding-std);
}

.line-icon {
	stroke: currentColor;
	stroke-width: 4;
	stroke-linecap: round;
	stroke-linejoin: round;
	fill: none;
}

.dark {
	--focus-ring-color: var(--focus-ring-color-dark);
	.light {
		--focus-ring-color: var(--focus-ring-color-light);
		.dark {
			--focus-ring-color: var(--focus-ring-color-dark);
			.light {
				--focus-ring-color: var(--focus-ring-color-light);
				.dark {
					--focus-ring-color: var(--focus-ring-color-dark);
				}
			}
		}
	}
}

form.styled button, button.styled, .button {
	text-decoration: none;
	display: inline-block;
	padding: calc(var(--padding-std) / 2) var(--padding-std);
	cursor: pointer;
	background: var(--liberal-red);
	color: white;
	border-style: none;
	border-radius: 6px;
	font-family: inherit;
	font-size: inherit;
	font-weight: bolder;
	transition: background 0.2s;
	text-shadow: 0 1px 0 rgb(0 0 0 / 25%);

	&:hover {
		background: var(--liberal-red-shade-1);
	}
	&:active {
		background: var(--liberal-red-shade-2);
		transition-duration: 0s;
	}
}

form.styled {
	display: grid;
	gap: var(--padding-std);

	fieldset {
		display: grid;
		row-gap: calc(var(--padding-std) / 4);
	}

	input:is([type="text"], [type="email"], [type="tel"]), textarea, select {
		font-family: inherit;
		font-size: inherit;
		border-radius: 3px;
		border: 1px solid color-mix(in lch, var(--liberal-grey), white 50%);
		padding: calc(var(--padding-std) / 2);
		background: white;
		color: black;
	}

	.is-safari & select {
		height: 2.22em; /* IOS and desktop won't take padding into account */
		accent-color: auto; /* IOS sets the text colour to accent colour */
	}

	input:is([type="radio"], [type="checkbox"]) {
		width: 1.2rem;
		height: 1.2rem;
	}

	input:is([type="text"], [type="email"], [type="tel"], [type="radio"], [type="checkbox"]), textarea, select, button {
		&:focus-visible {
			outline: 2px solid var(--focus-ring-color);
			outline-offset: 2px;
		}
	}

	.option-grid {
		display: grid;
		grid-template-columns: auto 1fr;
		gap: calc(var(--padding-std) / 4) calc(var(--padding-std) / 2);
		align-items: center;
	}
}

.unstyled {
	all: unset;
}
button.unstyled {
	cursor: pointer;
}
:is(ul, ol, dl, address).unstyled {
	display: block;
}
:is(ul, ol, dl).unstyled > :is(li, dt, dd) {
	all: unset;
	display: block;
}
/* ... */

